valueLen hex parse, artifacts

--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -405,6 +405,7 @@
 <link href="#rfc.section.12.1" rel="Chapter" title="12.1 Resending Test Responses"/>
 <link href="#rfc.section.13" rel="Chapter" title="13 Error Codes"/>
 <link href="#rfc.section.14" rel="Chapter" title="14 Other Considerations"/>
+<link href="#rfc.section.14.1" rel="Chapter" title="14.1 valueLen and hex/bit string parsing"/>
 <link href="#rfc.section.15" rel="Chapter" title="15 Acknowledgements"/>
 <link href="#rfc.section.16" rel="Chapter" title="16 IANA Considerations"/>
 <link href="#rfc.references" rel="Chapter" title="17 Normative References"/>
@@ -418,7 +419,7 @@
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-protocol-0.3" />
-  <meta name="dct.issued" scheme="ISO8601" content="2017-4-4" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-4-13" />
   <meta name="dct.abstract" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
   <meta name="description" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
 
@@ -439,10 +440,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">April 4, 2017</td>
+  <td class="right">April 13, 2017</td>
 </tr>
 <tr>
-  <td class="left">Expires: October 6, 2017</td>
+  <td class="left">Expires: October 15, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -463,7 +464,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on October 6, 2017.</p>
+<p>This Internet-Draft will expire on October 15, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -506,7 +507,8 @@
 <ul><li>12.1.   <a href="#rfc.section.12.1">Resending Test Responses</a></li>
 </ul><li>13.   <a href="#rfc.section.13">Error Codes</a></li>
 <li>14.   <a href="#rfc.section.14">Other Considerations</a></li>
-<li>15.   <a href="#rfc.section.15">Acknowledgements</a></li>
+<ul><li>14.1.   <a href="#rfc.section.14.1">valueLen and hex/bit string parsing</a></li>
+</ul><li>15.   <a href="#rfc.section.15">Acknowledgements</a></li>
 <li>16.   <a href="#rfc.section.16">IANA Considerations</a></li>
 <li>17.   <a href="#rfc.references">Normative References</a></li>
 <li>Appendix A.   <a href="#rfc.appendix.A">JSON Formatting Guidelines</a></li>
@@ -1131,6 +1133,12 @@ Content-Length: &lt;length of results&gt;
 <p id="rfc.section.13.p.1">Errors will follow HTTP[S] numbering scheme.  In addition errors as well as 200 messages may carry JSON encoded information that describes in detail the error and any associated troubleshooting information.  A non-exhaustive list of JSON encoded error messages are in Appendix B.</p>
 <h1 id="rfc.section.14"><a href="#rfc.section.14">14.</a> Other Considerations</h1>
 <p id="rfc.section.14.p.1">When an ACVP client is attached to a cryptographic module that is in use, access to ACVP MUST be controlled so that only an administrator or other authorized user can send and receive ACVP messages.  This is because an attacker that has access to ACVP can potentially use it to probe for weaknesses in the cryptographic module.</p>
+<h1 id="rfc.section.14.1"><a href="#rfc.section.14.1">14.1.</a> valueLen and hex/bit string parsing</h1>
+<p id="rfc.section.14.1.p.1">`valueLen` will be used as the example, but it can apply to any bit length registration/vector set/etc parameters.  </p>
+<p id="rfc.section.14.1.p.2">When a `value` is provided along with a `valueLen`, the `valueLen` MUST always be considered when parsing the hex string represented in `value`.  This is especially important for algorithms such as the SHA variations that may only include a portion of bits from the provided hex string, or in "empty" bit string scenarios.  </p>
+<p id="rfc.section.14.1.p.3">For example: </p>
+<p id="rfc.section.14.1.p.4">valueLen: 5, value: "FF", MUST be interpreted as the bits "11111" </p>
+<p id="rfc.section.14.1.p.5">valueLen: 0, value: ["00", "FF", "55", "", etc], MUST all be interpreted as an empty bit string "" </p>
 <h1 id="rfc.section.15"><a href="#rfc.section.15">15.</a> <a href="#Acknowledgements" id="Acknowledgements">Acknowledgements</a></h1>
 <p id="rfc.section.15.p.1">Original ACVP created by David McGrew, Bill Hudson and Anthony Grieco of Cisco Systems.</p>
 <h1 id="rfc.section.16"><a href="#rfc.section.16">16.</a> <a href="#IANA" id="IANA">IANA Considerations</a></h1>
