More cleanup of SHA from hashmac spec

--- a/artifacts/acvp_sub_hashmac.html
+++ b/artifacts/acvp_sub_hashmac.html
@@ -925,7 +925,7 @@
     </tr>
     <tr>
       <td class="left">mac</td>
-      <td class="left">MAC value generated</td>
+      <td class="left">MAC value, for CMAC verify</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
     </tr>
@@ -969,6 +969,26 @@
       <td class="left">testResults</td>
       <td class="left">Array of JSON objects that represent each test vector result, which uses the same JSON schema as defined in <a href="#tvjs">Section 3.2</a> </td>
       <td class="left">array</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">mac</td>
+      <td class="left">MAC value generated</td>
+      <td class="left">value</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">result</td>
+      <td class="left">The result of CMAC verify</td>
+      <td class="left">pass or fail</td>
     </tr>
   </tbody>
 </table>
