More cleanup of SHA from hashmac spec

--- a/artifacts/acvp_sub_hashmac.html
+++ b/artifacts/acvp_sub_hashmac.html
@@ -967,7 +967,7 @@
     </tr>
     <tr>
       <td class="left">testResults</td>
-      <td class="left">Array of JSON objects that represent each test vector result, which uses the same JSON schema as defined in <a href="#tvjs">Section 3.2</a> </td>
+      <td class="left">Array of JSON objects that represent each test vector result and is made up of one of the following values </td>
       <td class="left">array</td>
     </tr>
     <tr>
