--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -392,8 +392,9 @@
 <link href="#rfc.references.1" rel="Chapter" title="8.1 Normative References"/>
 <link href="#rfc.references.2" rel="Chapter" title="8.2 Informative References"/>
 <link href="#rfc.appendix.A" rel="Chapter" title="A Example Capabilities JSON Object"/>
-<link href="#rfc.appendix.B" rel="Chapter" title="B Example Test Vectors JSON Object"/>
-<link href="#rfc.appendix.C" rel="Chapter" title="C Example Test Results JSON Object"/>
+<link href="#rfc.appendix.B" rel="Chapter" title="B Example AFT Test and Results Vectors JSON Object"/>
+<link href="#rfc.appendix.C" rel="Chapter" title="C Example MCT Test and Results JSON Object"/>
+<link href="#rfc.appendix.D" rel="Chapter" title="D Example Test Results JSON Object"/>
 <link href="#rfc.authors" rel="Chapter"/>
 
 
@@ -477,8 +478,9 @@
 <ul><li>8.1.   <a href="#rfc.references.1">Normative References</a></li>
 <li>8.2.   <a href="#rfc.references.2">Informative References</a></li>
 </ul><li>Appendix A.   <a href="#rfc.appendix.A">Example Capabilities JSON Object</a></li>
-<li>Appendix B.   <a href="#rfc.appendix.B">Example Test Vectors JSON Object</a></li>
-<li>Appendix C.   <a href="#rfc.appendix.C">Example Test Results JSON Object</a></li>
+<li>Appendix B.   <a href="#rfc.appendix.B">Example AFT Test and Results Vectors JSON Object</a></li>
+<li>Appendix C.   <a href="#rfc.appendix.C">Example MCT Test and Results JSON Object</a></li>
+<li>Appendix D.   <a href="#rfc.appendix.D">Example Test Results JSON Object</a></li>
 <li><a href="#rfc.authors">Author's Address</a></li>
 
 
@@ -1246,8 +1248,8 @@
                 }
             }
             </pre>
-<h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
-<p id="rfc.section.B.p.1">The following is a example JSON object for test vectors sent from the ACVP server to the crypto module.</p>
+<h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example AFT Test and Results Vectors JSON Object</a></h1>
+<p id="rfc.section.B.p.1">The following is a example JSON object for AES-GCM test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
               [
                 { "acvVersion": "0.3" },
@@ -1261,7 +1263,7 @@
                       "ptLen": 0,
                       "aadLen": 128,
                       "tagLen": 128,
-                      "testType" : "AFT",
+                      "testType": "AFT",
                       "tests": [
                         {
                           "tcId": 2171,
@@ -1296,7 +1298,7 @@
                       "ptLen": 0,
                       "aadLen": 136,
                       "tagLen": 128,
-                      "testType" : "AFT",
+                      "testType": "AFT",
                       "tests": [
                         {
                           "tcId": 2186,
@@ -1319,7 +1321,7 @@
                       "ptLen": 128,
                       "aadLen": 128,
                       "tagLen": 128,
-                      "testType" : "AFT",
+                      "testType": "AFT",
                       "tests": [
                         {
                           "tcId": 2201,
@@ -1363,8 +1365,7 @@
                 }
 	      ]
             </pre>
-<h1 id="rfc.appendix.C"><a href="#rfc.appendix.C">Appendix C.</a> <a href="#app-results-ex" id="app-results-ex">Example Test Results JSON Object</a></h1>
-<p id="rfc.section.C.p.1">The following is a example JSON object for test results sent from the crypto module to the ACVP server.</p>
+<p id="rfc.section.B.p.2">The following is a example JSON object for AES-GCM test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 [
                   { "acvVersion": "0.3" },
@@ -1447,7 +1448,8 @@
 	      ]
 
             </pre>
-<p id="rfc.section.C.p.2">The following is a example JSON object for test vectors sent from the ACVP server to the crypto module for an AES-CBC Monte Carlo test.</p>
+<h1 id="rfc.appendix.C"><a href="#rfc.appendix.C">Appendix C.</a> <a href="#app-mct-results-ex" id="app-mct-results-ex">Example MCT Test and Results JSON Object</a></h1>
+<p id="rfc.section.C.p.1">The following is a example JSON object for test vectors sent from the ACVP server to the crypto module for an AES-CBC Monte Carlo test.</p>
 <pre>
               [
                 { "acvVersion": "0.3" },
@@ -1457,14 +1459,13 @@
                     {
                       "direction": "encrypt",
                       "keyLen": 128,
-                      "ivLen": 128
                       "ptLen": 128
-                      "testType" : "MCT",
+                      "testType": "MCT",
                       "tests": [
                         {
                           "tcId": 3171,
                           "key": "868a6705c03e630327259cd09e63354a",
-			  "iv" : "a771c0fc42300fa7b4c1eca82e1eb2f9",
+			  "iv": "a771c0fc42300fa7b4c1eca82e1eb2f9",
                           "pt": "8466e3b1680b40f8bae488e2f392ab33"
                         }
                       ]
@@ -1473,7 +1474,7 @@
 	        }
               ]
             </pre>
-<p id="rfc.section.C.p.3">The following is a example JSON object for test results sent from the crypto module to the ACVP server for a Monte Carlo test, only 2 iterations shown for brevity. For MCT results of each iteration are fed into the next iteration.  Therefore the results carry all fields to assist in any failure diagnosis.</p>
+<p id="rfc.section.C.p.2">The following is a example JSON object for test results sent from the crypto module to the ACVP server for an AES-CBC Monte Carlo test, only 2 iterations shown for brevity. For MCT results of each iteration are fed into the next iteration.  Therefore the results carry all fields to assist in any failure diagnosis.</p>
 <pre>
               [
                   { "acvVersion": "0.3" },
@@ -1483,7 +1484,7 @@
 			  "tcId": 3171,
 			  "resultsArray": [
 			    {
-			      "key" : "868a6705c03e630327259cd09e63354a",
+			      "key": "868a6705c03e630327259cd09e63354a",
 			      "iv": "a771c0fc42300fa7b4c1eca82e1eb2f9",
 			      "pt": "8466e3b1680b40f8bae488e2f392ab33",
 			      "ct": "161ac86ab184f638d43b1435161ebec4"
@@ -1500,7 +1501,8 @@
 		  }
                 ]
             </pre>
-<p id="rfc.section.C.p.4">An example of the test results format from an AES-GCM decrypt operation including failure case.</p>
+<h1 id="rfc.appendix.D"><a href="#rfc.appendix.D">Appendix D.</a> <a href="#app-test-results-ex" id="app-test-results-ex">Example Test Results JSON Object</a></h1>
+<p id="rfc.section.D.p.1">An example of the test results format from an AES-GCM decrypt operation including failure case.</p>
 <pre>
               [
                   { "acvVersion": "0.3" },
@@ -1508,11 +1510,11 @@
                     "testResults": [
                         {
                             "tcId": 2171,
-			    "pt" : "2CE1129D3E2F25468A9EE13ED39C902C"
+			    "pt": "2CE1129D3E2F25468A9EE13ED39C902C"
                         },
 			{
                             "tcId": 2172,
-			    "decryptFail" : "true"
+			    "decryptFail": "true"
                         }
                       ]
 		    }
