--- a/artifacts/acvp_sub_sha3.html
+++ b/artifacts/acvp_sub_sha3.html
@@ -400,7 +400,7 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Celi, C., Ed." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subsha-0.3" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subsha-0.4" />
   <meta name="dct.issued" scheme="ISO8601" content="2017-2" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using SHA3 and SHAKE with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using SHA3 and SHAKE with the ACVP specification." />
@@ -434,7 +434,7 @@
   </table>
 
   <p class="title">ACVP SHA3 and SHAKE JSON Specification<br />
-  <span class="filename">draft-ietf-acvp-subsha-0.3</span></p>
+  <span class="filename">draft-ietf-acvp-subsha-0.4</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -667,7 +667,7 @@
     </tr>
     <tr>
       <td class="left">msg</td>
-      <td class="left">Value of the message or seed</td>
+      <td class="left">Value of the message or seed.  Messages are represented as little-endian hex for all SHA3 variations.</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -772,11 +772,11 @@
  	    			
   	    		</pre>
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
-<p id="rfc.section.B.p.1">The following is an example JSON object for secure hash test vectors sent from the ACVP server to the crypto module.</p>
+<p id="rfc.section.B.p.1">The following is an example JSON object for secure hash test vectors sent from the ACVP server to the crypto module.  Notice that the single bit message is represented as "01". This complies with the little-endian nature of SHA3. All hex displayed is little-endian bit order when associated with SHA3 or any of its variations.  </p>
 <pre>
 
 {
-	"acvVersion": "0.3",
+	"acvVersion": "0.4",
 	"vsId": 1564,
   	"algorithm": "SHA3-512",
   	"testGroups": [
@@ -791,7 +791,7 @@
   		{
   			"tcId": 1,
   			"len": 1,
-  			"msg": "80"
+  			"msg": "01"
   		}]
   	}]
 }
@@ -800,7 +800,7 @@
 <pre>
 
 {
-  	"acvVersion": "0.3",
+  	"acvVersion": "0.4",
   	"vsId": 1564,
   	"algorithm": "SHA3-256",
   	"testGroups": [
@@ -824,7 +824,7 @@
 <pre>
 
 {
-    "acvVersion": "0.3",
+    "acvVersion": "0.4",
     "vsId": 1564,
     "algorithm": "SHA3-384",
     "testGroups": [
@@ -844,7 +844,7 @@
 <pre>
 
 {
-    "acvVersion": "0.3",
+    "acvVersion": "0.4",
     "vsId": 1564,
     "testResults": [
     {
@@ -861,7 +861,7 @@
 <pre>
 
 {
-    "acvVersion": "0.3",
+    "acvVersion": "0.4",
     "vsId": 1564,
     "testResults": [
     {
@@ -878,7 +878,7 @@
 <pre>
 
 {
-  	"acvVersion": "0.3",
+  	"acvVersion": "0.4",
   	"vsId": 1564,
   	"algorithm": "SHAKE-128",
   	"testGroups": [
@@ -904,13 +904,13 @@
 <pre>
 
 {
-    "acvVersion": "0.3",
+    "acvVersion": "0.4",
     "vsId": 1564,
     "testResults": [
     {
         "tcId": 2170,
-        "outputLen": 80
-        "md": "c60048b8ad8fc71e50ff"
+        "outputLen": 16
+        "md": "c604"
     },
     {
         "tcId": 2171,
