Update GCM/CCM decrypt failures

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -1137,6 +1137,16 @@
       <td class="left"/>
     </tr>
     <tr>
+      <td class="left">decryptFail</td>
+      <td class="left">For AES-GCM and AES-CCM decrypt failures are part of the test. For these cases the JSON reponse should include the decryptFail keyword, see <a href="#app-test-results-ex">Appendix D</a> </td>
+      <td class="left">boolean true</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">resultsArray</td>
       <td class="left">Array of JSON objects that represent each iteration of a Monte Carlo Test.  Each iteration will contain the key(s), pt, ct and iv(except for ECB mode)</td>
       <td class="left">array</td>
@@ -1514,7 +1524,7 @@
                         },
 			{
                             "tcId": 2172,
-			    "decryptFail": "true"
+			    "decryptFail": true
                         }
                       ]
 		    }
