--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -418,7 +418,7 @@
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-protocol-0.3" />
-  <meta name="dct.issued" scheme="ISO8601" content="2017-4-4" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-4-21" />
   <meta name="dct.abstract" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
   <meta name="description" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
 
@@ -439,10 +439,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">April 4, 2017</td>
+  <td class="right">April 21, 2017</td>
 </tr>
 <tr>
-  <td class="left">Expires: October 6, 2017</td>
+  <td class="left">Expires: October 23, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -463,7 +463,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on October 6, 2017.</p>
+<p>This Internet-Draft will expire on October 23, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -1040,26 +1040,26 @@ Content-Length: &lt;length of results&gt;
            </pre>
 <p class="figure">Figure 13</p>
 <p id="rfc.section.11.5.p.2">The results request is an optional flow since some clients may not require success/fail information. Another possibility is to provide an out of band management session on the server may provide access to algorithm test results.</p>
-<p id="rfc.section.11.5.p.3">Disposition is defined overall for the entire vector set as:</p>
+<p id="rfc.section.11.5.p.3">"disposition" is defined overall for the entire vector set as:</p>
 <p/>
 
 <ul>
-  <li>FAIL indicates at least one test case has failed.</li>
-  <li>UNRECEIVED indicates the server has not received responses from the client for all the test cases.</li>
-  <li>INCOMPLETE indicates not all tests have been processed by the server, however none have failed thus far.</li>
-  <li>EXPIRED indicates not all the test case responses were received from the client prior to expiry.</li>
-  <li>PASSED indicates all test cases have been processed by the server and have passed.</li>
+  <li>"fail" indicates at least one test case has failed.</li>
+  <li>"unreceived" indicates the server has not received responses from the client for all the test cases.</li>
+  <li>"incomplete" indicates not all tests have been processed by the server, however none have failed thus far.</li>
+  <li>"expired" indicates not all the test case responses were received from the client prior to expiry.</li>
+  <li>"passed" indicates all test cases have been processed by the server and have passed.</li>
 </ul>
-<p id="rfc.section.11.5.p.5">Result is defined for individual test cases:</p>
+<p id="rfc.section.11.5.p.5">"result" is defined for individual test cases:</p>
 <p/>
 
 <ul>
-  <li>FAIL indicates the test case has failed.</li>
-  <li>UNRECEIVED indicates the server has not received a response from the client for the test case.</li>
-  <li>INCOMPLETE indicates the server has not processed the test case.</li>
-  <li>EXPIRED indicates the client did not send the test case response to the server prior to expiry.</li>
-  <li>PASSED indicates the test case passed.</li>
-  <li>REASON provides additional detail for the test result.</li>
+  <li>"fail" indicates the test case has failed.</li>
+  <li>"unreceived" indicates the server has not received a response from the client for the test case.</li>
+  <li>"incomplete" indicates the server has not processed the test case.</li>
+  <li>"expired" indicates the client did not send the test case response to the server prior to expiry.</li>
+  <li>"passed" indicates the test case passed.</li>
+  <li>"reason" provides additional detail for the test result.</li>
 </ul>
 <h1 id="rfc.section.11.6"><a href="#rfc.section.11.6">11.6.</a> <a href="#optional_flows" id="optional_flows">Optional Flows</a></h1>
 <p id="rfc.section.11.6.p.1">The cancel URI can be used by the client to free a session.  The server is responsible for maintaining any database information for traceability or debugging purposes it desires.  This may be important for those cases where there are test failures.</p>
