--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -392,9 +392,11 @@
 <link href="#rfc.references.1" rel="Chapter" title="8.1 Normative References"/>
 <link href="#rfc.references.2" rel="Chapter" title="8.2 Informative References"/>
 <link href="#rfc.appendix.A" rel="Chapter" title="A Example Capabilities JSON Object"/>
-<link href="#rfc.appendix.B" rel="Chapter" title="B Example AFT Test and Results Vectors JSON Object"/>
-<link href="#rfc.appendix.C" rel="Chapter" title="C Example MCT Test and Results JSON Object"/>
-<link href="#rfc.appendix.D" rel="Chapter" title="D Example Test Results JSON Object"/>
+<link href="#rfc.appendix.B" rel="Chapter" title="B Example AES Test and Results Vectors JSON Object"/>
+<link href="#rfc.appendix.C" rel="Chapter" title="C Example AES MCT Test and Results JSON Object"/>
+<link href="#rfc.appendix.D" rel="Chapter" title="D Example TDES Test and Results JSON Object"/>
+<link href="#rfc.appendix.E" rel="Chapter" title="E Example TDES MCT Test and Results JSON Object"/>
+<link href="#rfc.appendix.F" rel="Chapter" title="F Example Test Results JSON Object"/>
 <link href="#rfc.authors" rel="Chapter"/>
 
 
@@ -478,9 +480,11 @@
 <ul><li>8.1.   <a href="#rfc.references.1">Normative References</a></li>
 <li>8.2.   <a href="#rfc.references.2">Informative References</a></li>
 </ul><li>Appendix A.   <a href="#rfc.appendix.A">Example Capabilities JSON Object</a></li>
-<li>Appendix B.   <a href="#rfc.appendix.B">Example AFT Test and Results Vectors JSON Object</a></li>
-<li>Appendix C.   <a href="#rfc.appendix.C">Example MCT Test and Results JSON Object</a></li>
-<li>Appendix D.   <a href="#rfc.appendix.D">Example Test Results JSON Object</a></li>
+<li>Appendix B.   <a href="#rfc.appendix.B">Example AES Test and Results Vectors JSON Object</a></li>
+<li>Appendix C.   <a href="#rfc.appendix.C">Example AES MCT Test and Results JSON Object</a></li>
+<li>Appendix D.   <a href="#rfc.appendix.D">Example TDES Test and Results JSON Object</a></li>
+<li>Appendix E.   <a href="#rfc.appendix.E">Example TDES MCT Test and Results JSON Object</a></li>
+<li>Appendix F.   <a href="#rfc.appendix.F">Example Test Results JSON Object</a></li>
 <li><a href="#rfc.authors">Author's Address</a></li>
 
 
@@ -1026,7 +1030,19 @@
     </tr>
     <tr>
       <td class="left">key</td>
-      <td class="left">Encryption key to use</td>
+      <td class="left">Encryption key to use AES</td>
+      <td class="left">value</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">key1, key2, key3</td>
+      <td class="left">Encryption keys to use for TDES</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -1138,7 +1154,7 @@
     </tr>
     <tr>
       <td class="left">decryptFail</td>
-      <td class="left">For AES-GCM and AES-CCM decrypt failures are part of the test. For these cases the JSON reponse should include the decryptFail keyword, see <a href="#app-test-results-ex">Appendix D</a> </td>
+      <td class="left">For AES-GCM and AES-CCM decrypt failures are part of the test. For these cases the JSON reponse should include the decryptFail keyword, see <a href="#app-test-results-ex">Appendix F</a> </td>
       <td class="left">boolean true</td>
     </tr>
     <tr>
@@ -1258,7 +1274,7 @@
                 }
             }
             </pre>
-<h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example AFT Test and Results Vectors JSON Object</a></h1>
+<h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example AES Test and Results Vectors JSON Object</a></h1>
 <p id="rfc.section.B.p.1">The following is a example JSON object for AES-GCM test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
               [
@@ -1458,7 +1474,7 @@
 	      ]
 
             </pre>
-<h1 id="rfc.appendix.C"><a href="#rfc.appendix.C">Appendix C.</a> <a href="#app-mct-results-ex" id="app-mct-results-ex">Example MCT Test and Results JSON Object</a></h1>
+<h1 id="rfc.appendix.C"><a href="#rfc.appendix.C">Appendix C.</a> <a href="#app-mct-results-ex" id="app-mct-results-ex">Example AES MCT Test and Results JSON Object</a></h1>
 <p id="rfc.section.C.p.1">The following is a example JSON object for test vectors sent from the ACVP server to the crypto module for an AES-CBC Monte Carlo test.</p>
 <pre>
               [
@@ -1469,7 +1485,6 @@
                     {
                       "direction": "encrypt",
                       "keyLen": 128,
-                      "ptLen": 128
                       "testType": "MCT",
                       "tests": [
                         {
@@ -1511,8 +1526,113 @@
 		  }
                 ]
             </pre>
-<h1 id="rfc.appendix.D"><a href="#rfc.appendix.D">Appendix D.</a> <a href="#app-test-results-ex" id="app-test-results-ex">Example Test Results JSON Object</a></h1>
-<p id="rfc.section.D.p.1">An example of the test results format from an AES-GCM decrypt operation including failure case.</p>
+<h1 id="rfc.appendix.D"><a href="#rfc.appendix.D">Appendix D.</a> <a href="#app-tdes1-results-ex" id="app-tdes1-results-ex">Example TDES Test and Results JSON Object</a></h1>
+<p id="rfc.section.D.p.1">The following is a example JSON object for test vectors sent from the ACVP server to the crypto module for an TDES-ECB algorithm functional test.</p>
+<pre>
+              [
+                { "acvVersion": "0.3" },
+                { "vsId": 1564,
+                  "algorithm": "TDES-ECB",
+                  "testGroups": [
+                    {
+                      "direction": "encrypt",
+                      "testType": "AFT",
+                      "tests": [
+                        {
+                         "tcId" : 236,
+                         "key1" : "5BE5B5FE9BB3E36D",
+                         "key2" : "26E92C6DD35D7AB3",
+                         "key3" : "4F89ADAD15D62FE3",
+                         "pt" : "7119CCA0648787AE"
+                        }, {
+                         "tcId" : 237,
+                         "key1" : "2C7015EC2C044591",
+                         "key2" : "230D79A1D0F2469D",
+                         "key3" : "7A9EF7FDC4383131",
+                         "pt" : "772923F53BA2EA60E7AE232425657B49"
+                        }
+                      ]
+                    }
+		  ]
+	        }
+              ]
+            </pre>
+<p id="rfc.section.D.p.2">The following is a example JSON object for test results sent from the crypto module to the ACVP server for an TDES-ECB algorithm functional test.</p>
+<pre>
+              [
+                  { "acvVersion": "0.3" },
+                  { "vsId": 1564,
+                    "testResults": [
+                            {
+                              "tcId": 236,
+                              "ct": "1E85F8256575B8B1"
+                            },
+                            {
+                              "tcId": 237,
+                              "ct": "BEFD0E02088D48648FEBAAFEDAA89614"
+                            }
+			  ]
+		       }	
+                    ]
+		  }
+                ]
+            </pre>
+<h1 id="rfc.appendix.E"><a href="#rfc.appendix.E">Appendix E.</a> <a href="#app-tdes2-results-ex" id="app-tdes2-results-ex">Example TDES MCT Test and Results JSON Object</a></h1>
+<p id="rfc.section.E.p.1">The following is a example JSON object for test vectors sent from the ACVP server to the crypto module for an TDES-ECB Monte Carlo test.</p>
+<pre>
+              [
+                { "acvVersion": "0.3" },
+                { "vsId": 1564,
+                  "algorithm": "TDES-ECB",
+                  "testGroups": [
+                    {
+                      "direction": "encrypt",
+                      "testType": "MCT",
+                      "tests": [
+                        {
+                          "tcId" : 492,
+                          "key1" : "0EABB0E6B0F129D5",
+                          "key2" : "DF61EAD07315DA37",
+                          "key3" : "EFA2B6A252A18694",
+                          "ct" : "2970B363C1461FAF"
+                        }
+                      ]
+                    }
+		  ]
+	        }
+              ]
+            </pre>
+<p id="rfc.section.E.p.2">The following is a example JSON object for test results sent from the crypto module to the ACVP server for an TDES-ECB Monte Carlo test, only 2 iterations shown for brevity. For MCT results of each iteration are fed into the next iteration.  Therefore the results carry all fields to assist in any failure diagnosis.</p>
+<pre>
+              [
+                  { "acvVersion": "0.3" },
+                  { "vsId": 1564,
+                    "testResults": [
+                        {
+			  "tcId": 492,
+			  "resultsArray": [
+                           {
+                                "key1": "0EABB0E6B0F129D5",
+                                "key2": "DF61EAD07315DA37",
+                                "key3": "EFA2B6A252A18694",
+                                "ct": "2970B363C1461FAF",
+                                "pt": "40F806F9DE3466C0"
+                            },
+                            {
+                                "key1": "4F52B61F6EC44F15",
+                                "key2": "2FEC373726FEADF1",
+                                "key3": "37B57029B65B3767",
+                                "ct": "40F806F9DE3466C0",
+                                "pt": "A498B9748F2FB1E5"
+                            }
+  			  ]
+		       }	
+                    ]
+		  }
+                ]
+            </pre>
+<h1 id="rfc.appendix.F"><a href="#rfc.appendix.F">Appendix F.</a> <a href="#app-test-results-ex" id="app-test-results-ex">Example Test Results JSON Object</a></h1>
+<p id="rfc.section.F.p.1">An example of the test results format from an AES-GCM decrypt operation including failure case.</p>
 <pre>
               [
                   { "acvVersion": "0.3" },
