--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -1260,18 +1260,17 @@
                     96,
                     128
                 ],
-                "ivLen": {
-                    "min" : 96,
-                    "max" : 96
-                },
-                "ptLen": {
-                    "min" : 0,
-                    "max" : 256
-                },
-                "aadLen": {
-                    "min" : 128,
-                    "max" : 256
-                }
+                "ivLen": [
+                    96
+                ],
+                "ptLen": [
+                    0,
+                    256
+                ],
+                "aadLen": [
+                    128,
+                    256
+                ]
             }
             </pre>
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example AES Test and Results Vectors JSON Object</a></h1>
