--- a/artifacts/acvp_sub_sha.html
+++ b/artifacts/acvp_sub_sha.html
@@ -798,7 +798,7 @@
         {
             "tcId": 2175,
             "len": 20,
-            "seed": "331b04d56f6e3ed5af349bf1fd9f9591b6ec886e",
+            "msg": "331b04d56f6e3ed5af349bf1fd9f9591b6ec886e",
         }]
     }]
 }
