--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -1138,8 +1138,8 @@ Content-Length: &lt;length of results&gt;
 <p id="rfc.section.14.1.p.1">HexStrings should be considered in big endian order, unless otherwise specified for the algorithm.  </p>
 <p id="rfc.section.14.1.p.2">The hex string "FA" (assuming all bits are considered) should represent the bits 11111010 (in MSb) or the value 250.  </p>
 <h1 id="rfc.section.14.2"><a href="#rfc.section.14.2">14.2.</a> Hex to Bitstring Parsing</h1>
-<p id="rfc.section.14.2.p.1">`valueLen` will be used as the example, but it can apply to any bit length registration/vector set/etc parameters.  </p>
-<p id="rfc.section.14.2.p.2">When a `value` is provided along with a `valueLen`, the `valueLen` MUST be considered when parsing the hex string represented in `value`, EXCEPT in empty bitstring cases, which MUST be represented as an empty string "".  Parsing Hex strings into Bit strings is especially important for algorithms such as the SHA variations that may only include a portion of bits from the provided hex string.  When only a portion of bits from a Hex string are considered, bits for use in the bitstring should be taken from the most significant bits, meaning the lesser significant bits are the bits that are dropped.  </p>
+<p id="rfc.section.14.2.p.1">"valueLen" will be used as the example, but it can apply to any bit length registration/vector set/etc parameters.  </p>
+<p id="rfc.section.14.2.p.2">When a "value" is provided along with a "valueLen", the "valueLen" MUST be considered when parsing the hex string represented in "value", EXCEPT in empty bitstring cases, which MUST be represented as an empty string "".  Parsing Hex strings into Bit strings is especially important for algorithms such as the SHA variations that may only include a portion of bits from the provided hex string.  When only a portion of bits from a Hex string are considered, bits for use in the bitstring should be taken from the most significant bits, meaning the lesser significant bits are the bits that are dropped.  </p>
 <h1 id="rfc.section.14.2.1"><a href="#rfc.section.14.2.1">14.2.1.</a> Hex string parsing examples</h1>
 <p/>
 
