--- a/artifacts/acvp_sub_rsa.html
+++ b/artifacts/acvp_sub_rsa.html
@@ -433,7 +433,7 @@
 
   <meta name="dct.creator" content="Vassilev, A., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subrsa-0.4" />
-  <meta name="dct.issued" scheme="ISO8601" content="2017-4-14" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-5-30" />
   <meta name="dct.abstract" content="This document defines the JSON schema for testing RSA algorithm implementations for conformance to  " />
   <meta name="description" content="This document defines the JSON schema for testing RSA algorithm implementations for conformance to  " />
 
@@ -454,10 +454,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">April 14, 2017</td>
+  <td class="right">May 30, 2017</td>
 </tr>
 <tr>
-  <td class="left">Expires: October 16, 2017</td>
+  <td class="left">Expires: December 1, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -478,7 +478,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on October 16, 2017.</p>
+<p>This Internet-Draft will expire on December 1, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -1839,7 +1839,7 @@
   </tbody>
 </table>
 <h1 id="rfc.appendix.A"><a href="#rfc.appendix.A">Appendix A.</a> <a href="#app-reg-ex" id="app-reg-ex">Example RSA Capabilities JSON Objects</a></h1>
-<p id="rfc.section.A.p.1">This appendix contains example JSON object advertising support for the verious RSA modes:keyGen, sigGen, sigVer, legacySigVer, compRSASP1.</p>
+<p id="rfc.section.A.p.1">This appendix contains example JSON object advertising support for the verious RSA modes:keyGen, sigGen, sigVer, legacySigVer, compRSASP1. Note that all binary HEX representations are in big-endian format.</p>
 <h1 id="rfc.appendix.A.1"><a href="#rfc.appendix.A.1">A.1.</a> <a href="#app-ex-keyGenProvPrime" id="app-ex-keyGenProvPrime">Example keyGen Capabilities JSON Objects</a></h1>
 <p id="rfc.section.A.1.p.1">The following is an example JSON object advertising support for RSA keyGen with provable primes according to <a href="#FIPS186-4">[FIPS186-4]</a>, Appendix B.3.2. See also <a href="#mode_keyGenFullSet">Section 2.4.1.3</a>.</p>
 <pre>
@@ -1852,7 +1852,7 @@
               "mode": "keyGen",
               "capSpecs" :  {
                       "fixedPubExp" : "yes",
-                      "fixedPubExpVal" : "10001",
+                      "fixedPubExpVal" : "010001",
                       "randPQ" : "1",
                       "capsProvPrime" : 
                             [
@@ -1890,7 +1890,7 @@
           "mode":"keyGen",
           "capSpecs": {
             "fixedPubExp":"yes",
-            "fixedPubExpVal":"10001",
+            "fixedPubExpVal":"010001",
             "randPQ":"2",
             "capProbPrime":{
               "modProbPrime":["2048", "3072", "4096"],
@@ -1914,7 +1914,7 @@
            "mode": "keyGen",
            "capSpecs" : {
                "fixedPubExp" : "yes",
-               "fixedPubExpVal" : "10001",
+               "fixedPubExpVal" : "010001",
                "randPQ" : "4",
                "capsProvPrime" : 
                     [
@@ -2109,6 +2109,7 @@
 <p id="rfc.section.B.p.1">This appendix contains example JSON objects for test vectors sent from the ACVP server to the crypto module.</p>
 <h1 id="rfc.appendix.B.1"><a href="#rfc.appendix.B.1">B.1.</a> <a href="#app-testVectProvProvPrime-ex" id="app-testVectProvProvPrime-ex">Example Test Vectors for keyGen JSON Objects</a></h1>
 <pre>
+
  [
    { "acvVersion": "0.3" },
    { "vsId": "1133",
