Replaces "yes"/"no" with true/false

--- a/artifacts/acvp_sub_rsa.html
+++ b/artifacts/acvp_sub_rsa.html
@@ -1012,7 +1012,7 @@
       <td class="left">fixedPubExp</td>
       <td class="left">Supports fixed public key exponent e</td>
       <td class="left">value</td>
-      <td class="left">"yes","no"</td>
+      <td class="left">true or false</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
@@ -1040,7 +1040,7 @@
       <td class="left">randPubExp</td>
       <td class="left">Supports random public key exponent e</td>
       <td class="left">value</td>
-      <td class="left">"yes","no"</td>
+      <td class="left">true or false</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
@@ -1955,7 +1955,7 @@
          {"modeSpecs" : {
               "mode": "keyGen",
               "capSpecs" :  {
-                      "fixedPubExp" : "yes",
+                      "fixedPubExp" : true,
                       "fixedPubExpVal" : "010001",
                       "randPQ" : 1,
                       "capProvPrime" : 
@@ -1995,7 +1995,7 @@
         "modeSpecs": {
           "mode":"keyGen",
           "capSpecs": {
-            "fixedPubExp":"yes",
+            "fixedPubExp": true,
             "fixedPubExpVal":"010001",
             "randPQ": 2,
             "capProbPrime":[{
@@ -2025,7 +2025,7 @@
          {"modeSpecs" : {
            "mode": "keyGen",
            "capSpecs" : {
-               "fixedPubExp" : "yes",
+               "fixedPubExp" : true,
                "fixedPubExpVal" : "010001",
                "randPQ" : 4,
                "capsProvProbPrime" : 
