--- a/artifacts/acvp_sub_sha3.html
+++ b/artifacts/acvp_sub_sha3.html
@@ -874,9 +874,15 @@
 <p id="rfc.section.C.p.2">The following is a example JSON object for secure hash Monte Carlo Test results sent from the crypto module to the ACVP server. Reduced to 2 iterations for brevity.</p>
 <pre>
 
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
+{
+    "acvVersion": "0.4",
+    "vsId": 1564,
+=======
 [
   { "acvVersion": "0.3" },
   { "vsId": 1564,
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; v_0.3
     "testResults": [
     {
         "tcId": 2175,
