Fixes SigGen/Ver quotes - artifacts

--- a/artifacts/acvp_sub_rsa.html
+++ b/artifacts/acvp_sub_rsa.html
@@ -1139,7 +1139,7 @@
       <td class="left">modRSASigGen</td>
       <td class="left">supported RSA moduli for signature generation - see <a href="#FIPS186-4">[FIPS186-4]</a>, Section 5</td>
       <td class="left">array</td>
-      <td class="left">any non-empty subset of {"2048", "3072", "4096"}</td>
+      <td class="left">any non-empty subset of {2048, 3072, 4096}</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -1211,7 +1211,7 @@
       <td class="left">modRSASigVer</td>
       <td class="left">supported RSA moduli for signature verification - see <a href="#FIPS186-4">[FIPS186-4]</a>, Section 5</td>
       <td class="left">array</td>
-      <td class="left">any non-empty subset of {"2048", "3072", "4096"}</td>
+      <td class="left">any non-empty subset of {2048, 3072, 4096}</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -1284,7 +1284,7 @@
       <td class="left">modLegacyRSASigVer</td>
       <td class="left">supported RSA moduli for signature verification - see <a href="#SP800-131A">[SP800-131A]</a></td>
       <td class="left">array</td>
-      <td class="left">any non-empty subset of {"1024", "1536", "2048", "3072", "4096"}</td>
+      <td class="left">any non-empty subset of {1024, 1536, 2048, 3072, 4096}</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -1672,7 +1672,7 @@
     </tr>
     <tr>
       <td class="left">seed</td>
-      <td class="left">the seed used in prime generation according to <a href="#FIPS186-4">[FIPS186-4]</a>, Appendix B.3.2, B3.4, or B3.5</td>
+      <td class="left">the seed used in prime generation according to <a href="#FIPS186-4">[FIPS186-4]</a>, Appendix B.3.2, B.3.4, or B3.5</td>
       <td class="left">hex value</td>
       <td class="left">Yes</td>
     </tr>
@@ -1684,7 +1684,7 @@
     </tr>
     <tr>
       <td class="left">bitlen1</td>
-      <td class="left">the length of p1 for prime generation according to <a href="#FIPS186-4">[FIPS186-4]</a>, Appendix B.3.2, B3.4, B3.5 or the length of xP1 for B3.6</td>
+      <td class="left">the length of p1 for prime generation according to <a href="#FIPS186-4">[FIPS186-4]</a>, Appendix B.3.2, B.3.4, B3.5 or the length of xP1 for B.3.6</td>
       <td class="left">hex value</td>
       <td class="left">Yes</td>
     </tr>
