Adds SHA.html changes

--- a/artifacts/acvp_sub_sha.html
+++ b/artifacts/acvp_sub_sha.html
@@ -513,14 +513,14 @@
       <td class="left">inBit</td>
       <td class="left">Implementation does accept bit-oriented messages</td>
       <td class="left">value</td>
-      <td class="left">yes, no</td>
+      <td class="left">true or false</td>
       <td class="left">No</td>
     </tr>
     <tr>
       <td class="left">inEmpty</td>
       <td class="left">Implementation does accept null (zero-length) messages</td>
       <td class="left">value</td>
-      <td class="left">yes, no</td>
+      <td class="left">true or false</td>
       <td class="left">No</td>
     </tr>
   </tbody>
@@ -606,13 +606,13 @@
     <tr>
       <td class="left">inBit</td>
       <td class="left">States that each test case in the group is bit-oriented (yes or no)</td>
-      <td class="left">value</td>
+      <td class="left">true or false</td>
       <td class="left">No</td>
     </tr>
     <tr>
       <td class="left">inEmpty</td>
       <td class="left">States that the empty message is included in the group</td>
-      <td class="left">value</td>
+      <td class="left">true or false</td>
       <td class="left">No for Algorithm Functional Tests. Yes for all others.</td>
     </tr>
   </tbody>
@@ -740,8 +740,8 @@
 
 {
 	"algorithm": "SHA-256",
-	"inBit": "yes",
-	"inEmpty": "yes"
+	"inBit": true,
+	"inEmpty": true
 }
 
   	            </pre>
