RSA Mode fix - artifacts

--- a/artifacts/acvp_sub_rsa.html
+++ b/artifacts/acvp_sub_rsa.html
@@ -681,7 +681,7 @@
       <td class="left">algorithm</td>
       <td class="left">The RSA algorithm to be validated</td>
       <td class="left">value</td>
-      <td class="left">"RSA"</td>
+      <td class="left">"RSA-KeyGen", "RSA-SigGen", "RSA-SigVer"</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -996,9 +996,9 @@
   <tbody>
     <tr>
       <td class="left">mode</td>
-      <td class="left">The mode to be validated</td>
+      <td class="left">Key Generation mode to be validated. Random P and Q primes generated as (see <a href="#FIPS186-4">[FIPS186-4]</a>): provable primes (Appendix B.3.2); probable primes (Appendix B.3.3); provable primes with conditions (Appendix B.3.4); provable/probable primes with conditions (Appendix B.3.5); probable primes with conditions (Appendix B.3.6)</td>
       <td class="left">value</td>
-      <td class="left">"keyGen", see <a href="#algs_table">Table 1</a></td>
+      <td class="left">"B.3.2", "B.3.3", "B.3.4", "B.3.5", "B.3.6"</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -1041,20 +1041,6 @@
       <td class="left">Supports random public key exponent e</td>
       <td class="left">value</td>
       <td class="left">true or false</td>
-      <td class="left">Yes</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
-      <td class="left">randPQ</td>
-      <td class="left">Random P and Q primes generated as (see <a href="#FIPS186-4">[FIPS186-4]</a>): 1 - provable primes (Appendix B.3.2); 2 - probable primes (Appendix B.3.3); 3 - provable primes (Appendix B.3.4); 4 - provable/probable primes (Appendix B.3.5); 5 - probable primes (Appendix B.3.6)</td>
-      <td class="left">value</td>
-      <td class="left">{1, 2, 3, 4, 5}</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
@@ -1362,7 +1348,7 @@
     </tr>
     <tr>
       <td class="left">algorithm</td>
-      <td class="left">The RSA algorithm used for the test vectors.  See <a href="#supported_algs">Section 2.1</a> for possible values.</td>
+      <td class="left">The RSA algorithm used for the test vectors.  "RSA-KeyGen", "RSA-SigGen", or "RSA-SigVer".</td>
       <td class="left">value</td>
     </tr>
     <tr>
@@ -1394,21 +1380,9 @@
   <tbody>
     <tr>
       <td class="left">mode</td>
-      <td class="left">The RSA algorithm mode used for the test vectors.  See <a href="#supported_algs">Section 2.1</a> for possible values.</td>
+      <td class="left">The Key Gen method, or Sig Type.</td>
       <td class="left">value</td>
       <td class="left">No</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
-      <td class="left">randPQ</td>
-      <td class="left">RSA prime generation method - see <a href="#keyGen_table">Table 7</a></td>
-      <td class="left">value</td>
-      <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left"/>
@@ -1455,7 +1429,7 @@
     <tr>
       <td class="left">pubExp</td>
       <td class="left">Fixed or random public exponent</td>
-      <td class="left">hex value or "random"</td>
+      <td class="left">"fixed" or "random"</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
@@ -1463,12 +1437,6 @@
       <td class="left"/>
       <td class="left"/>
       <td class="left"/>
-    </tr>
-    <tr>
-      <td class="left">sigType</td>
-      <td class="left">The type of digital signature algorithm - see  <a href="#sigGenRSAMod">Table 8</a></td>
-      <td class="left">value</td>
-      <td class="left">Yes</td>
     </tr>
   </tbody>
 </table>
