Addresses #68 - AES-XPN

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -679,6 +679,20 @@
       <td class="left"/>
     </tr>
     <tr>
+      <td class="left">saltGen</td>
+      <td class="left">Salt generation method for AES-XPN mode only.</td>
+      <td class="left">value</td>
+      <td class="left">internal, external</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">aadLen</td>
       <td class="left">The supported AAD lengths in bits for AEAD algorithms, </td>
       <td class="left">range or array</td>
@@ -824,6 +838,7 @@
   <li>AES-CFB128</li>
   <li>AES-CTR</li>
   <li>AES-GCM</li>
+  <li>AES-XPN</li>
   <li>AES-CCM</li>
   <li>AES-XTS</li>
   <li>AES-KW</li>
@@ -914,6 +929,42 @@
       <td class="left">The encryption direction: encrypt or decrypt</td>
       <td class="left">value</td>
       <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">ivGen</td>
+      <td class="left">IV generation method (Required for AES-GCM and AES-XPN)</td>
+      <td class="left">value</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">ivGenMode</td>
+      <td class="left">IV generation method (Required for AES-GCM and AES-XPN w/ internal ivGen)</td>
+      <td class="left">value</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">saltGen</td>
+      <td class="left">Salt generation method (Required AES-XPN)</td>
+      <td class="left">value</td>
+      <td class="left">Yes</td>
     </tr>
     <tr>
       <td class="left"/>
@@ -1065,6 +1116,18 @@
       <td class="left"/>
     </tr>
     <tr>
+      <td class="left">salt</td>
+      <td class="left">The salt to use in AES-XPN (required for AES-XPN only)</td>
+      <td class="left">value</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
       <td class="left">pt</td>
       <td class="left">Plaintext to use</td>
       <td class="left">value</td>
@@ -1154,7 +1217,7 @@
     </tr>
     <tr>
       <td class="left">decryptFail</td>
-      <td class="left">For AES-GCM and AES-CCM decrypt failures are part of the test. For these cases the JSON reponse should include the decryptFail keyword, see <a href="#app-test-results-ex">Appendix F</a> </td>
+      <td class="left">Some test cases included with decrypt operations in AES-GCM, AES-CCM, AES-XPN, AES-KW, AES-KWP, and TDES-KW will have expected failures. For these cases the JSON reponse should include the decryptFail keyword, see <a href="#app-test-results-ex">Appendix F</a> </td>
       <td class="left">boolean true</td>
     </tr>
     <tr>
