Added testType and ivGen to json

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -1311,7 +1311,7 @@
                     "decrypt"
                 ],
                 "ivGen": "internal",
-                "ivGenMode": "8.2.1",
+                "ivGenMode": "8.2.2",
                 "keyLen": [
                     128,
                     192,
@@ -1344,6 +1344,9 @@
                   "testGroups": [
                     {
                       "direction": "encrypt",
+                      "testType": "AFT",
+                      "ivGen": "internal",
+                      "ivGenMode": "8.2.2",
                       "keyLen": 128,
                       "ivLen": 96,
                       "ptLen": 0,
@@ -1379,6 +1382,9 @@
                     },
                     {
                       "direction": "encrypt",
+                      "testType": "AFT",
+                      "ivGen": "internal",
+                      "ivGenMode": "8.2.2",
                       "keyLen": 128,
                       "ivLen": 96,
                       "ptLen": 0,
@@ -1402,6 +1408,9 @@
                     },
                     {
                       "direction": "encrypt",
+                      "testType": "AFT",
+                      "ivGen": "internal",
+                      "ivGenMode": "8.2.2",
                       "keyLen": 128,
                       "ivLen": 96,
                       "ptLen": 128,
