Update appendix with note on endianess

--- a/artifacts/acvp_sub_dsa.html
+++ b/artifacts/acvp_sub_dsa.html
@@ -389,12 +389,13 @@
 <link href="#rfc.section.6" rel="Chapter" title="6 IANA Considerations"/>
 <link href="#rfc.section.7" rel="Chapter" title="7 Security Considerations"/>
 <link href="#rfc.references" rel="Chapter" title="8 Normative References"/>
-<link href="#rfc.appendix.A" rel="Chapter" title="A Example DSA2 Capabilities JSON Object"/>
-<link href="#rfc.appendix.B" rel="Chapter" title="B Example Test DSA2 Generate JSON Object"/>
-<link href="#rfc.appendix.C" rel="Chapter" title="C Example Test DSA2 Verify JSON Object"/>
-<link href="#rfc.appendix.D" rel="Chapter" title="D Example Test DSA2 Generation JSON Object"/>
-<link href="#rfc.appendix.E" rel="Chapter" title="E Example Test DSA2 Generation JSON Object"/>
-<link href="#rfc.appendix.F" rel="Chapter" title="F Example Test DSA2 Generation JSON Object"/>
+<link href="#rfc.appendix.A" rel="Chapter" title="A Example DSA2 JSON Object"/>
+<link href="#rfc.appendix.A.1" rel="Chapter" title="A.1 Example DSA2 Capabilities JSON Object"/>
+<link href="#rfc.appendix.A.2" rel="Chapter" title="A.2 Example Test DSA2 Generate JSON Object"/>
+<link href="#rfc.appendix.A.3" rel="Chapter" title="A.3 Example Test DSA2 Verify JSON Object"/>
+<link href="#rfc.appendix.A.4" rel="Chapter" title="A.4 Example Test DSA2 Generation JSON Object"/>
+<link href="#rfc.appendix.A.5" rel="Chapter" title="A.5 Example Test DSA2 Generation JSON Object"/>
+<link href="#rfc.appendix.A.6" rel="Chapter" title="A.6 Example Test DSA2 Generation JSON Object"/>
 <link href="#rfc.authors" rel="Chapter"/>
 
 
@@ -475,13 +476,14 @@
 <li>6.   <a href="#rfc.section.6">IANA Considerations</a></li>
 <li>7.   <a href="#rfc.section.7">Security Considerations</a></li>
 <li>8.   <a href="#rfc.references">Normative References</a></li>
-<li>Appendix A.   <a href="#rfc.appendix.A">Example DSA2 Capabilities JSON Object</a></li>
-<li>Appendix B.   <a href="#rfc.appendix.B">Example Test DSA2 Generate JSON Object</a></li>
-<li>Appendix C.   <a href="#rfc.appendix.C">Example Test DSA2 Verify JSON Object</a></li>
-<li>Appendix D.   <a href="#rfc.appendix.D">Example Test DSA2 Generation JSON Object</a></li>
-<li>Appendix E.   <a href="#rfc.appendix.E">Example Test DSA2 Generation JSON Object</a></li>
-<li>Appendix F.   <a href="#rfc.appendix.F">Example Test DSA2 Generation JSON Object</a></li>
-<li><a href="#rfc.authors">Author's Address</a></li>
+<li>Appendix A.   <a href="#rfc.appendix.A">Example DSA2 JSON Object</a></li>
+<ul><li>A.1.   <a href="#rfc.appendix.A.1">Example DSA2 Capabilities JSON Object</a></li>
+<li>A.2.   <a href="#rfc.appendix.A.2">Example Test DSA2 Generate JSON Object</a></li>
+<li>A.3.   <a href="#rfc.appendix.A.3">Example Test DSA2 Verify JSON Object</a></li>
+<li>A.4.   <a href="#rfc.appendix.A.4">Example Test DSA2 Generation JSON Object</a></li>
+<li>A.5.   <a href="#rfc.appendix.A.5">Example Test DSA2 Generation JSON Object</a></li>
+<li>A.6.   <a href="#rfc.appendix.A.6">Example Test DSA2 Generation JSON Object</a></li>
+</ul><li><a href="#rfc.authors">Author's Address</a></li>
 
 
   </ul>
@@ -1169,8 +1171,10 @@
     </tr>
   </tbody>
 </table>
-<h1 id="rfc.appendix.A"><a href="#rfc.appendix.A">Appendix A.</a> <a href="#app-reg-ex" id="app-reg-ex">Example DSA2 Capabilities JSON Object</a></h1>
-<p id="rfc.section.A.p.1">The following is a example JSON object advertising support for SHA-256.</p>
+<h1 id="rfc.appendix.A"><a href="#rfc.appendix.A">Appendix A.</a> <a href="#app-reg-ex" id="app-reg-ex">Example DSA2 JSON Object</a></h1>
+<p id="rfc.section.A.p.1">The following sections contain example JSON for the various DSA modes: keyPair, sigGen, sigVer, pqgGen and pqgVer. Note that all binary HEX representations are in big-endian format.</p>
+<h1 id="rfc.appendix.A.1"><a href="#rfc.appendix.A.1">A.1.</a> <a href="#app-reg-ex0" id="app-reg-ex0">Example DSA2 Capabilities JSON Object</a></h1>
+<p id="rfc.section.A.1.p.1">The following is a example JSON object advertising support for all DSA modes.</p>
 <pre>
 
 
@@ -1221,8 +1225,8 @@
 			   ] 
             }
             </pre>
-<h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex1" id="app-vs-ex1">Example Test DSA2 Generate JSON Object</a></h1>
-<p id="rfc.section.B.p.1">The following is a example JSON object for DSA2 generate test vectors sent from the ACVP server to the crypto module and the response.</p>
+<h1 id="rfc.appendix.A.2"><a href="#rfc.appendix.A.2">A.2.</a> <a href="#app-vs-ex1" id="app-vs-ex1">Example Test DSA2 Generate JSON Object</a></h1>
+<p id="rfc.section.A.2.p.1">The following is a example JSON object for DSA2 generate test vectors sent from the ACVP server to the crypto module and the response.</p>
 <pre>
               [
                 { "acvVersion": "0.4" },
@@ -1245,7 +1249,7 @@
                 }
              ]
             </pre>
-<p id="rfc.section.B.p.2">The following is a example JSON object for DSA2 test results sent from the crypto module to the ACVP server.</p>
+<p id="rfc.section.A.2.p.2">The following is a example JSON object for DSA2 test results sent from the crypto module to the ACVP server.</p>
 <pre>
               [
                 { "acvVersion": "0.4" },
@@ -1262,8 +1266,8 @@
                 }
              ]
             </pre>
-<h1 id="rfc.appendix.C"><a href="#rfc.appendix.C">Appendix C.</a> <a href="#app-vs-ex2" id="app-vs-ex2">Example Test DSA2 Verify JSON Object</a></h1>
-<p id="rfc.section.C.p.1">The following is a example JSON object for DSA2 verify test vectors sent from the ACVP server to the crypto module and the response.</p>
+<h1 id="rfc.appendix.A.3"><a href="#rfc.appendix.A.3">A.3.</a> <a href="#app-vs-ex2" id="app-vs-ex2">Example Test DSA2 Verify JSON Object</a></h1>
+<p id="rfc.section.A.3.p.1">The following is a example JSON object for DSA2 verify test vectors sent from the ACVP server to the crypto module and the response.</p>
 <pre>
               [
                 { "acvVersion": "0.4" },
@@ -1289,7 +1293,7 @@
                 }
              ]
             </pre>
-<p id="rfc.section.C.p.2">The following is a example JSON object for DSA2 test results sent from the crypto module to the ACVP server.</p>
+<p id="rfc.section.A.3.p.2">The following is a example JSON object for DSA2 test results sent from the crypto module to the ACVP server.</p>
 <pre>
               [
                 { "acvVersion": "0.4" },
@@ -1303,8 +1307,8 @@
                 }
              ]
             </pre>
-<h1 id="rfc.appendix.D"><a href="#rfc.appendix.D">Appendix D.</a> <a href="#app-vs-ex3" id="app-vs-ex3">Example Test DSA2 Generation JSON Object</a></h1>
-<p id="rfc.section.D.p.1">The following is a example JSON object for DSA2 generation test vectors sent from the ACVP server to the crypto module and the response.</p>
+<h1 id="rfc.appendix.A.4"><a href="#rfc.appendix.A.4">A.4.</a> <a href="#app-vs-ex3" id="app-vs-ex3">Example Test DSA2 Generation JSON Object</a></h1>
+<p id="rfc.section.A.4.p.1">The following is a example JSON object for DSA2 generation test vectors sent from the ACVP server to the crypto module and the response.</p>
 <pre>
              [
                 { "acvVersion": "0.4" },
@@ -1323,7 +1327,7 @@
                    }]
               }]
             </pre>
-<p id="rfc.section.D.p.2">The following is a example JSON object for DSA2 generation test results sent from the crypto module to the ACVP server.</p>
+<p id="rfc.section.A.4.p.2">The following is a example JSON object for DSA2 generation test results sent from the crypto module to the ACVP server.</p>
 <pre>
               [
                 { "acvVersion": "0.4" },
@@ -1342,8 +1346,8 @@
                 }
              ]
           </pre>
-<h1 id="rfc.appendix.E"><a href="#rfc.appendix.E">Appendix E.</a> <a href="#app-vs-ex4" id="app-vs-ex4">Example Test DSA2 Generation JSON Object</a></h1>
-<p id="rfc.section.E.p.1">The following is a example JSON object for DSA2 generation test vectors sent from the ACVP server to the crypto module and the response.</p>
+<h1 id="rfc.appendix.A.5"><a href="#rfc.appendix.A.5">A.5.</a> <a href="#app-vs-ex4" id="app-vs-ex4">Example Test DSA2 Generation JSON Object</a></h1>
+<p id="rfc.section.A.5.p.1">The following is a example JSON object for DSA2 generation test vectors sent from the ACVP server to the crypto module and the response.</p>
 <pre>
              [
                 { "acvVersion": "0.4" },
@@ -1366,7 +1370,7 @@
                    }]
               }]
             </pre>
-<p id="rfc.section.E.p.2">The following is a example JSON object for DSA2 generation test results sent from the crypto module to the ACVP server.</p>
+<p id="rfc.section.A.5.p.2">The following is a example JSON object for DSA2 generation test results sent from the crypto module to the ACVP server.</p>
 <pre>
               [
                 { "acvVersion": "0.4" },
@@ -1380,8 +1384,8 @@
                 }
              ]
           </pre>
-<h1 id="rfc.appendix.F"><a href="#rfc.appendix.F">Appendix F.</a> <a href="#app-vs-ex5" id="app-vs-ex5">Example Test DSA2 Generation JSON Object</a></h1>
-<p id="rfc.section.F.p.1">The following is a example JSON object for DSA2 generation test vectors sent from the ACVP server to the crypto module and the response.</p>
+<h1 id="rfc.appendix.A.6"><a href="#rfc.appendix.A.6">A.6.</a> <a href="#app-vs-ex5" id="app-vs-ex5">Example Test DSA2 Generation JSON Object</a></h1>
+<p id="rfc.section.A.6.p.1">The following is a example JSON object for DSA2 generation test vectors sent from the ACVP server to the crypto module and the response.</p>
 <pre>
              [
                 { "acvVersion": "0.4" },
@@ -1400,7 +1404,7 @@
                    }]
               }]
             </pre>
-<p id="rfc.section.F.p.2">The following is a example JSON object for DSA2 generation test results sent from the crypto module to the ACVP server.</p>
+<p id="rfc.section.A.6.p.2">The following is a example JSON object for DSA2 generation test results sent from the crypto module to the ACVP server.</p>
 <pre>
               [
                 { "acvVersion": "0.4" },
