Update appendix with note on endianess

--- a/artifacts/acvp_sub_dsa.html
+++ b/artifacts/acvp_sub_dsa.html
@@ -816,7 +816,7 @@
     </tr>
     <tr>
       <td class="left">modulo</td>
-      <td class="left">modulo for this test case</td>
+      <td class="left">modulo for this test group</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
     </tr>
