entropyInput -> entropyInputLen for registration

--- a/artifacts/acvp_sub_drbg.html
+++ b/artifacts/acvp_sub_drbg.html
@@ -1346,7 +1346,7 @@
                 "prereqVals": [{"algorithm": "TDES", "valValue": "same"}],
                 "predResistanceEnabled": true,
                 "reseedImplemented" : true,
-                "entropyInput": [ { "min": 112,
+                "entropyInputLen": [ { "min": 112,
                                 "max": 256,
                                 "step" : 144} ],
                 "nonceLen": [ 56 ],
@@ -1364,7 +1364,7 @@
                 "prereqVals": [{"algorithm": "AES", "valValue": "1234"}],
                 "predResistanceEnabled": true,
                 "reseedImplemented" : true,
-                "entropyInput":[ { "min": 128,
+                "entropyInputLen":[ { "min": 128,
                                 "max": 256,
                                 "step" : 128} ],
                 "nonceLen": [ 64 ],
@@ -1381,7 +1381,7 @@
                 "prereqVals": [{"algorithm": "AES", "valValue": "1234"}, {"algorithm": "SHA", "valValue": "5678"}],
                 "predResistanceEnabled": true,
                 "reseedImplemented" : true,
-                 "entropyInput":[ { "min": 256,
+                 "entropyInputLen":[ { "min": 256,
                                 "max": 512,
                                 "step" : 1} ],
                 "nonceLen": [ {"min" : 128,
@@ -1404,7 +1404,7 @@
                 "prereqVals": [{"algorithm": "AES", "valValue": "1234"}, {"algorithm": "HMAC", "valValue": "9012"}],
                 "predResistanceEnabled": true,
                 "reseedImplemented" : true,
-                "entropyInput": [ 256 ],
+                "entropyInputLen": [ 256 ],
                 "nonceLen": [ 128 ],
                 "persoStringLen": [ 256 ],
                "additionalInputLen": [256 ],
