Fixes mode to randPQ -- artifacts

--- a/artifacts/acvp_sub_rsa.html
+++ b/artifacts/acvp_sub_rsa.html
@@ -981,7 +981,7 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">mode</td>
+      <td class="left">randPQ</td>
       <td class="left">Key Generation mode to be validated. Random P and Q primes generated as (see <a href="#FIPS186-4">[FIPS186-4]</a>): provable primes (Appendix B.3.2); probable primes (Appendix B.3.3); provable primes with conditions (Appendix B.3.4); provable/probable primes with conditions (Appendix B.3.5); probable primes with conditions (Appendix B.3.6)</td>
       <td class="left">value</td>
       <td class="left">"B.3.2", "B.3.3", "B.3.4", "B.3.5", "B.3.6"</td>
