key confirmation options artifacts

--- a/artifacts/acvp_sub_kas_ffc.html
+++ b/artifacts/acvp_sub_kas_ffc.html
@@ -1172,13 +1172,69 @@
 <h1 id="rfc.section.2.15">
 <a href="#rfc.section.2.15">2.15.</a> <a href="#supported_kcOption" id="supported_kcOption">Supported KAS FFC KC Options</a>
 </h1>
-<p id="rfc.section.2.15.p.1">TODO</p>
+<p id="rfc.section.2.15.p.1">The following KC options are available for registration under a "kdfKc" kasMode:</p>
+<div id="rfc.table.11"></div>
+<div id="kcOption_details_table"></div>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+<caption>KAS FFC KC Option Details Capabilities JSON Values</caption>
+<thead><tr>
+<th class="left">JSON Value</th>
+<th class="left">Description</th>
+<th class="left">JSON type</th>
+<th class="left">Valid Values</th>
+<th class="left">Optional</th>
+</tr></thead>
+<tbody>
+<tr>
+<td class="left">kcRole</td>
+<td class="left">The role(s) the IUT is to act as for KeyConfirmation.</td>
+<td class="left">array</td>
+<td class="left">provider/recipient</td>
+<td class="left">No</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">kcType</td>
+<td class="left">The type(s) the IUT is to act as for KeyConfirmation.</td>
+<td class="left">array</td>
+<td class="left">unilateral/bilateral</td>
+<td class="left">No</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">nonceType</td>
+<td class="left">The nonce type(s) the IUT is to use for KeyConfirmation.</td>
+<td class="left">array</td>
+<td class="left">randomNonce, timestamp, sequence, timestampSequence</td>
+<td class="left">No</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+</tbody>
+</table>
 <h1 id="rfc.section.3">
 <a href="#rfc.section.3">3.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a>
 </h1>
 <p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual KAS FFC function.  This section describes the JSON schema for a test vector set used with KAS FFC algorithms.</p>
 <p id="rfc.section.3.p.2">The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client.The following table describes the JSON elements at the top level of the hierarchy.  </p>
-<div id="rfc.table.11"></div>
+<div id="rfc.table.12"></div>
 <div id="vs_top_table"></div>
 <table cellpadding="3" cellspacing="0" class="tt full center">
 <caption>Vector Set JSON Object</caption>
@@ -1241,7 +1297,7 @@
 </h1>
 <p id="rfc.section.3.1.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
 <p id="rfc.section.3.1.p.2">The test group for KAS FFC is as follows:</p>
-<div id="rfc.table.12"></div>
+<div id="rfc.table.13"></div>
 <div id="vs_tg_table5"></div>
 <table cellpadding="3" cellspacing="0" class="tt full center">
 <caption>Vector Group JSON Object</caption>
@@ -1422,7 +1478,7 @@
 <a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Case JSON Schema</a>
 </h1>
 <p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test cases.  Each test case is a JSON object that represents a single test vector to be processed by the ACVP client.  The following table describes the JSON elements for each KAS FFC test vector.</p>
-<div id="rfc.table.13"></div>
+<div id="rfc.table.14"></div>
 <div id="vs_tc_table5"></div>
 <table cellpadding="3" cellspacing="0" class="tt full center">
 <caption>Test Case JSON Object</caption>
@@ -1733,7 +1789,7 @@
 <a href="#rfc.section.4">4.</a> <a href="#vector_responses" id="vector_responses">Test Vector Responses</a>
 </h1>
 <p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the response vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
-<div id="rfc.table.14"></div>
+<div id="rfc.table.15"></div>
 <div id="vr_top_table"></div>
 <table cellpadding="3" cellspacing="0" class="tt full center">
 <caption>Vector Set Response JSON Object</caption>
